--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -72,141 +72,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shutil\n",
-    "\n",
-    "shutil.copy(r\"C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\CUENTAS DE CAJA IVSA.xlsx\", r\"C:\\Users\\crist\\Desktop\\Hola.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tkinter as tk\n",
-    "\n",
-    "wd = tk.Tk()\n",
-    "wd.title(\"Hola\")\n",
-    "wd.geometry(\"300x300\")\n",
-    "op = tk.IntVar()\n",
-    "op1 = tk.Radiobutton(wd, text = \"Heble\", variable = op, value = 1, command=lambda: print('Hola'))\n",
-    "op1.pack()\n",
-    "wd.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1920 1080\n",
-      "<class 'int'>\n",
-      "<class 'int'>\n"
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\n",
+      "El archivo MIGRACIONES SGV DICIEMBRE 2022 28.12.2022.xlsx no existe en el directorio.\n",
+      "La hoja AG. ACHUMANI no existe en el archivo MIGRACIONES SGV DICIEMBRE 2022 28.12.2022.xlsx.\n"
      ]
-    }
-   ],
-   "source": [
-    "import pyautogui as pg\n",
-    "\n",
-    "a, b = pg.size()\n",
-    "\n",
-    "print(a,b)\n",
-    "print(type(a))\n",
-    "print(type(b))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola2\n",
-      "Hola\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'wb' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39musefulFunctions\u001b[39;00m \u001b[39mimport\u001b[39;00m ndocTOxlsx, currentPathParentFolder\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(currentPathParentFolder)\n\u001b[1;32m----> 3\u001b[0m ndocTOxlsx(\u001b[39m'\u001b[39;49m\u001b[39mCCAJ-LP08/298/22\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m13161561565\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAG. ACHUMANI\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mMIGRACIONES SGV DICIEMBRE 2022 28.12.2022\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mC:\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mcrist\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mOneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mVenado\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mCris\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mBot5\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mCuentas recaudadoras\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mlogs.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\src\\usefulFunctions.py:170\u001b[0m, in \u001b[0;36mndocTOxlsx\u001b[1;34m(asignacion, ndoc, rec, xlsx, logPath)\u001b[0m\n\u001b[0;32m    168\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m    169\u001b[0m     writeLog(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mLa hoja \u001b[39m\u001b[39m{\u001b[39;00mrec\u001b[39m}\u001b[39;00m\u001b[39m no existe en el archivo \u001b[39m\u001b[39m{\u001b[39;00mxlsx\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m, logPath)\n\u001b[1;32m--> 170\u001b[0m wb\u001b[39m.\u001b[39msave(xlsxPath)\n\u001b[0;32m    171\u001b[0m wb\u001b[39m.\u001b[39mclose()\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'wb' referenced before assignment"
      ]
     }
    ],
    "source": [
-    "l = 2 \n",
-    "match l:\n",
-    "    case 1:\n",
-    "        print(\"Hola1\")\n",
-    "    case 2:\n",
-    "        print(\"Hola2\")\n",
-    "\n",
-    "print('Hola')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\CUENTAS DE CAJA IVSA.xlsx\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os \n",
-    "import usefulFunctions\n",
-    "\n",
-    "x = os.path.join(usefulFunctions.currentPathParentFolder, 'Cuentas recaudadoras', 'CUENTAS DE CAJA IVSA.xlsx')\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function wm_iconphoto in module tkinter:\n",
-      "\n",
-      "wm_iconphoto(self, default=False, *args)\n",
-      "    Sets the titlebar icon for this window based on the named photo\n",
-      "    images passed through args. If default is True, this is applied to\n",
-      "    all future created toplevels as well.\n",
-      "    \n",
-      "    The data in the images is taken as a snapshot at the time of\n",
-      "    invocation. If the images are later changed, this is not reflected\n",
-      "    to the titlebar icons. Multiple images are accepted to allow\n",
-      "    different images sizes to be provided. The window manager may scale\n",
-      "    provided icons to an appropriate size.\n",
-      "    \n",
-      "    On Windows, the images are packed into a Windows icon structure.\n",
-      "    This will override an icon specified to wm_iconbitmap, and vice\n",
-      "    versa.\n",
-      "    \n",
-      "    On X, the images are arranged into the _NET_WM_ICON X property,\n",
-      "    which most modern window managers support. An icon specified by\n",
-      "    wm_iconbitmap may exist simultaneously.\n",
-      "    \n",
-      "    On Macintosh, this currently does nothing.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tkinter as tk\n",
-    "help(tk.Tk.iconphoto)"
+    "from usefulFunctions import ndocTOxlsx, currentPathParentFolder\n",
+    "print(currentPathParentFolder)\n",
+    "ndocTOxlsx('CCAJ-LP08/298/22', '13161561565', 'AG. ACHUMANI', 'MIGRACIONES SGV DICIEMBRE 2022 28.12.2022', r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\logs.txt')"
    ]
   },
   {
