--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -72,35 +72,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from usefulFunctions import ndocTOxlsx, currentPathParentFolder\n",
+    "print(currentPathParentFolder)\n",
+    "ndocTOxlsx('CCAJ-LP08/298/22', '13161561565', 'AG. ACHUMANI', 'MIGRACIONES SGV DICIEMBRE 2022 28.12.2022', r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\logs.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\n",
-      "El archivo MIGRACIONES SGV DICIEMBRE 2022 28.12.2022.xlsx no existe en el directorio.\n",
-      "La hoja AG. ACHUMANI no existe en el archivo MIGRACIONES SGV DICIEMBRE 2022 28.12.2022.xlsx.\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'wb' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39musefulFunctions\u001b[39;00m \u001b[39mimport\u001b[39;00m ndocTOxlsx, currentPathParentFolder\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(currentPathParentFolder)\n\u001b[1;32m----> 3\u001b[0m ndocTOxlsx(\u001b[39m'\u001b[39;49m\u001b[39mCCAJ-LP08/298/22\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m13161561565\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mAG. ACHUMANI\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mMIGRACIONES SGV DICIEMBRE 2022 28.12.2022\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mC:\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mcrist\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mOneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mVenado\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mCris\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mBot5\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mCuentas recaudadoras\u001b[39;49m\u001b[39m\\\u001b[39;49m\u001b[39mlogs.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\src\\usefulFunctions.py:170\u001b[0m, in \u001b[0;36mndocTOxlsx\u001b[1;34m(asignacion, ndoc, rec, xlsx, logPath)\u001b[0m\n\u001b[0;32m    168\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m    169\u001b[0m     writeLog(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mLa hoja \u001b[39m\u001b[39m{\u001b[39;00mrec\u001b[39m}\u001b[39;00m\u001b[39m no existe en el archivo \u001b[39m\u001b[39m{\u001b[39;00mxlsx\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m, logPath)\n\u001b[1;32m--> 170\u001b[0m wb\u001b[39m.\u001b[39msave(xlsxPath)\n\u001b[0;32m    171\u001b[0m wb\u001b[39m.\u001b[39mclose()\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'wb' referenced before assignment"
+      "(15, 21)\n",
+      "oy ?\n"
      ]
     }
    ],
    "source": [
-    "from usefulFunctions import ndocTOxlsx, currentPathParentFolder\n",
-    "print(currentPathParentFolder)\n",
-    "ndocTOxlsx('CCAJ-LP08/298/22', '13161561565', 'AG. ACHUMANI', 'MIGRACIONES SGV DICIEMBRE 2022 28.12.2022', r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\logs.txt')"
+    "import re\n",
+    "l = 'hola, cómo has estado hoy ?'\n",
+    "x = re.search('estado', l).span()\n",
+    "y = l[-4:]\n",
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
@@ -127,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
