Bot5GUI --v1.01 - falta probar directo y varias asignaciones a la vez

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -106,6 +106,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRASL A BANCO X\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'TRASLADO A BANCO X'\n",
+    "l = l.replace('TRASLADO', 'TRASL')\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = min([25, 43])\n",
+    "print(x)\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n",
+      "37\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'Elija correctamente lo desea migrar: '\n",
+    "l1 = '        Flujo de migracion:          '\n",
+    "l2 = '¿Realizó la validación manual?'\n",
+    "print(len(l))\n",
+    "print(len(l1))\n",
+    "print(len(l2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
