Bot5GUI --v 1.01 SOLO AGENCIAS probadas

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -169,6 +169,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hola', 'heble']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['hola', 'heble']\n",
+    "l = l[:40]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['jaja', 'hola']\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = ['hola', 'heble', 'jaja', 'alo']\n",
+    "l2 = ['jaja', 'hebla', 'hola', 'ala']\n",
+    "l3 = list(set(l1).intersection(l2))\n",
+    "print(l3)\n",
+    "y = {1, 2}\n",
+    "print(type(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
