Bot5 GUI --v 1.00 beta terminada

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -229,6 +229,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101044012, 101044012, 101044012, 101041012, 101044032, 101044032, 101041082, 101041002, 101044022, 101044022, 101044052, 101044052, 101044062, 101044042, 101044082, 101044102, 101044092]\n",
+      "[101044032, 101044102, 101041002, 101044042, 101044012, 101044082, 101041012, 101044052, 101044022, 101041082, 101044092, 101044062]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "\n",
+    "l = []\n",
+    "wb = load_workbook(r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\CUENTAS DE CAJA IVSA.xlsx')\n",
+    "ws = wb.active\n",
+    "for i in range (4, 21):\n",
+    "    l.append(ws.cell(row = i, column = 4).value)\n",
+    "\n",
+    "print(l)\n",
+    "\n",
+    "l2 = list(set(l))\n",
+    "print(l2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[101044032, 101044042, 101044012, 101044082, 101044052, 101044022, 101044062]\n",
+      "[101044102, 101041002, 101041012, 101041082, 101044092]\n",
+      "[101044072, 101044002]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [101044002, 101044012, 101044022, 101044032, 101044042, 101044052, 101044062, 101044072, 101044082]\n",
+    "l2 = [101044032, 101044102, 101041002, 101044042, 101044012, 101044082, 101041012, 101044052, 101044022, 101041082, 101044092, 101044062]\n",
+    "l3 = list(set(l).intersection(l2))\n",
+    "l4 = list(set(l2)-set(l))\n",
+    "l5 = list(set(l)-set(l2))\n",
+    "\n",
+    "\n",
+    "print(l3)\n",
+    "print(l4)\n",
+    "print(l5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
