Bot5 GUI --v 1.00 beta terminada2

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -229,15 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[101044012, 101044012, 101044012, 101041012, 101044032, 101044032, 101041082, 101041002, 101044022, 101044022, 101044052, 101044052, 101044062, 101044042, 101044082, 101044102, 101044092]\n",
-      "[101044032, 101044102, 101041002, 101044042, 101044012, 101044082, 101041012, 101044052, 101044022, 101041082, 101044092, 101044062]\n"
+      "[101052002, 101044002, 101044012, 101044022, 101044032, 101044042, 101044052, 101044062, 101044072, 101044082, 101051002, 101041032, 101041022, 101041012, 101041002, 101043002, 101042022, 101051012, 101041042, 101041052, 101041082, 101043042, 101042012, 101045012]\n"
      ]
     }
    ],
@@ -245,15 +244,15 @@
     "from openpyxl import load_workbook\n",
     "\n",
     "l = []\n",
-    "wb = load_workbook(r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\CUENTAS DE CAJA IVSA.xlsx')\n",
+    "wb = load_workbook(r'C:\\Users\\crist\\OneDrive\\Escritorio\\cuentas.xlsx')\n",
     "ws = wb.active\n",
-    "for i in range (4, 21):\n",
-    "    l.append(ws.cell(row = i, column = 4).value)\n",
+    "for i in range (2, 26):\n",
+    "    l.append(ws.cell(row = i, column = 3).value)\n",
     "\n",
     "print(l)\n",
     "\n",
     "l2 = list(set(l))\n",
-    "print(l2)\n",
+    "# print(l2)\n",
     "\n"
    ]
   },
@@ -282,7 +281,10 @@
     "\n",
     "print(l3)\n",
     "print(l4)\n",
-    "print(l5)\n"
+    "print(l5)\n",
+    "101044012\n",
+    "\n",
+    "[101052002;101044002;101044012;101044022;101044032;101044042;101044052;101044062;101044072;101044082;101051002;101041032;101041022;101041012;101041002;101043002;101042022;101051012;101041042;101041052;101041082;101043042;101042012;101045012]\n"
    ]
   },
   {
