--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -289,6 +289,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hola']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'hola'\n",
+    "splitL = l.split('')\n",
+    "print(splitL)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -297,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +335,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "43973268aa23c7cf4b4cafe0e819fac9b2412fcc991a21988492c3271a4e3f9b"
+    "hash": "d127611eb3f918657fdca84c08db6618815417301761a91e39141f560e6d6196"
    }
   }
  },
