Bot5 GUI casilla delta fecha implementada - antes de implementar minusculas en los nombres

--- a/src/probando.ipynb
+++ b/src/probando.ipynb
@@ -25,6 +25,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "menor\n",
+      "0\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "fecha = '01.01.2019'\n",
+    "fecha = datetime.strptime(fecha, '%d.%m.%Y')\n",
+    "\n",
+    "element = '01.01.2019'\n",
+    "element = datetime.strptime(element, '%d.%m.%Y')\n",
+    "\n",
+    "if element > fecha:\n",
+    "    print('mayor')\n",
+    "    print(type((fecha - element).days))\n",
+    "\n",
+    "else:\n",
+    "    print('menor')\n",
+    "    print((fecha - element).days)\n",
+    "    print(type((fecha - element).days))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
