Bot5 GUI descomentando el servicio tecnico

--- a/src/probando.ipynb
+++ b/src/probando.ipynb
@@ -59,6 +59,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRISTHIAM\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'CRISTHIAM'\n",
+    "x = x.upper()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
