Bot5 GUI beta final primera revisión-incluye boton paste y correción de fecha en ETV flow 2

--- a/src/probando.ipynb
+++ b/src/probando.ipynb
@@ -78,6 +78,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def x():\n",
+    "    print('hola')\n",
+    "\n",
+    "y = x()\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iam\n"
+     ]
+    }
+   ],
+   "source": [
+    "l =  'cristhiam'\n",
+    "l = l[-3:]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
