--- a/src/probando.ipynb
+++ b/src/probando.ipynb
@@ -119,6 +119,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = None\n",
+    "y = str(x)\n",
+    "print(y)\n",
+    "print(type(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maihtsirc\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'cristhiam'\n",
+    "x = x[::-1]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m x \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mfindall(\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39m(.*\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m/)(\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md\u001b[39m\u001b[39m{2}\u001b[39;00m\u001b[39m).*\u001b[39m\u001b[39m'\u001b[39m, asignacion)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(x)\n\u001b[1;32m----> 5\u001b[0m x \u001b[39m=\u001b[39m x[\u001b[39m0\u001b[39;49m][\u001b[39m0\u001b[39m]\u001b[39m+\u001b[39mx[\u001b[39m0\u001b[39m][\u001b[39m1\u001b[39m]\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(x)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "asignacion = 'xd'\n",
+    "x = re.findall(r'(.*\\/)(\\d{2}).*', asignacion)\n",
+    "print(x)\n",
+    "x = x[0][0]+x[0][1]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "for i in range(4, 0, -1): \n",
+    "    print(lista[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
