Bot5 GUI nuevo formato para migraciones

--- a/src/probando.ipynb
+++ b/src/probando.ipynb
@@ -215,6 +215,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "y = 'CCAJ-LP02'\n",
+    "x = re.findall(r'\\/(\\d+)\\/', y)\n",
+    "# z = int(x[0])\n",
+    "print(x)\n",
+    "# print(z)\n",
+    "# print(type(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
